# ZPDS

./: .gitignore  AGENTS.md  README.md  batch_prepare.py  clean.py  config.yaml  imu_checker.py  prepare_segment.py  pyproject.toml  reader.py  report.py  timestamp_checker.py  video_checker.py  功能实现说明.md  项目结构说明.md
configs/gold/: five_source_manifest.yaml
configs/governance/: versioning.yaml
configs/pipeline/: default.yaml  pilot.yaml
configs/qc_thresholds/: a2d_robot.yaml  dunjia_ego.yaml  epic100.yaml  guida_ego.yaml  jianzhi_umi.yaml
configs/quality_views/: v0.1.0.yaml
configs/reason_codes/: v0.1.0.yaml
docs/: ZPDS_企业级落地实施计划.md
docs/adr/: 0001-data-objects-and-boundaries.md  0002-units-time-coordinate-pose.md  0003-decision-severity-origin.md  0004-versioning-naming-migration.md  README.md
docs/governance/: Gold样例人工确认指南.md  WP0验收说明.md  WP1前三步实现说明.md  WP1完成与验收说明.md  WP1第4至6步实现说明.md  WP2完成与验收说明.md  WP2补充验证与WP3基础清洗闭环.md
examples/schemas/: ceu.json  dataset.json  experience_manifest.json  release.json  revision.json  segment.json  segment_quarantine.json
scripts/: manage_gold.py  run_export.py  run_pipeline.py  run_qc_report.py  validate_wp0.py
scripts/pilot/: phase0_gold_standard.py  phase1_inventory.py  phase2_prepare.py  phase3_qc.py  phase4_hand_vlm.py
segment/: __init__.py  calibration.py  imu_normalizer.py  sample_map.py  segment_writer.py  span_determiner.py  validator.py  video_transcoder.py
tests/test_adapters/: test_containers.py  test_guida.py  test_profiles.py
tests/test_cli/: test_cli.py
tests/test_config/: test_loader.py
tests/test_core/: test_governance_models.py  test_migrations.py
tests/test_governance/: test_manage_gold.py  test_wp0_assets.py
tests/test_observability/: test_observability.py
tests/test_pipeline/: test_ledger.py  test_runner.py  test_stage.py
tests/test_prepared/: test_guida_basic.py
tests/test_qc/: test_source_pipeline.py
tests/test_storage/: test_local.py
tests/test_utils/: test_schema_validator.py
zpds/: __init__.py  __main__.py  cli.py
zpds/adapters/: __init__.py  a2d.py  base.py  common.py  contracts.py  epic.py  guida.py  profiled_mcap.py  registry.py
zpds/annotation/: __init__.py  assets.py  ceu.py  experience.py
zpds/config/: __init__.py  loader.py  registry.py
zpds/core/: __init__.py  decisions.py  migrations.py  provenance.py  quality.py  types.py
zpds/export/: __init__.py  base.py  lerobot.py  rlds.py
zpds/hands/: __init__.py  detector.py  manipulation.py  metrics.py  pose_estimator.py  tracker.py
zpds/observability/: __init__.py  events.py  metrics.py
zpds/pipeline/: __init__.py  ledger.py  runner.py  stage.py
zpds/prepared/: __init__.py  conventions.py  guida_basic.py  revision.py  validator.py  writer.py
zpds/profiles/: __init__.py  a2d_robot.py  base.py  dunjia_ego.py  epic100.py  guida_ego.py  jianzhi_umi.py  registry.py
zpds/qc/: __init__.py  cascade.py  (+14 more)
zpds_prepare/: __init__.py  main.py
(+71 files in other folders)
