[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpds"
version = "0.1.0"
description = "具身智能数据标准化管线 — ZPDS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ZPDS Team"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "opencv-python>=4.8",
    "jsonschema>=4.22",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
zpds = "zpds.cli:main"

[project.optional-dependencies]
mcap = [
    "mcap>=1.0",
    "mcap-protobuf-support>=0.5",
    "mcap-ros2-support>=0.5",
    "foxglove-schemas-protobuf>=0.1",
]
hdf5 = ["h5py>=3.9"]
hands = ["torch>=2.0", "torchvision>=0.15"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-jsonschema>=4.22",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
include = ["zpds*"]

[tool.setuptools.package-data]
zpds = ["schemas/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-p", "no:cacheprovider", "--basetemp=.pytest-tmp"]

[tool.mypy]
python_version = "3.10"
files = ["zpds"]
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
